# byrdocs-tui

./: .gitignore  Cargo.toml  README.md  program notes.md  rustfmt.toml
config/: Cargo.toml
config/src/: definition.rs  genconf.rs  getconf.rs  lib.rs
docs/: README.md  workflow.md  workspace-readme.md
filesystem/: Cargo.toml
filesystem/src/: getconf.rs  lib.rs
init/: Cargo.toml
init/src/: check.rs  create.rs  lib.rs  readme.rs
lib-test/: Cargo.toml
lib-test/src/: lib.rs
macros/: Cargo.toml
macros/src/: formatln.rs  lib.rs
metadata/: Cargo.toml
metadata/src/: definition.rs  lib.rs  md5sum.rs
metadata/src/definitions/: book.rs  doc.rs  mod.rs  pretype.rs  test.rs
metadata/src/read/: book.rs  doc.rs  mod.rs  test.rs
metadata/src/write/: book.rs  doc.rs  mod.rs  test.rs
src/: cli.rs  main.rs
src/add/: mod.rs
src/cover/: mod.rs
src/cover/add/: mod.rs
src/cover/replace/: mod.rs
src/lib/: config.rs  metadata.rs
src/lib/metadata/: definition.rs  mod.rs
src/query/: mod.rs
src/remove/: mod.rs
tui/: Cargo.toml
tui/src/: main.rs
