[package]
name = "cli"
version = "0.1.0"
authors = ["cppHusky <cpphusky@outlook.com>"]
edition = "2021"

[dependencies]
argh = "0.1.12"
clap = { version = "4.5.9", features = ["derive"] }
clap_builder = "4.5.9"
config = "0.14.0"
home = "0.5.9"
isbnid = "0.1.3"
serde = "1.0.204"

[build-dependencies]
