[package]
name = "cli"
version = "0.1.0"
authors = ["cppHusky <cpphusky@outlook.com>"]
edition = "2021"

[dependencies]
argh = "0.1.12"
clap = { version = "4.5.9", features = ["derive"] }
clap_builder = "4.5.9"
config = "0.14.0"
file-format = "0.25.0"
home = "0.5.9"
isbnid = "0.1.3"
md5 = "0.7.0"
serde = "1.0.204"
serde_json = "1.0.121"

[build-dependencies]
