[workspace]
resolver = "2"
members = [ "tui", "config", "init", "metadata", "macros"]
default-members = [ "tui" ]

[workspace.package]
version = "0.1.0"
authors = [
	"cppHusky",
]
documentation = "https://github.com/byrdocs/byrdocs-tui/tree/master/docs/README.md"
edition = "2021"

[workspace.dependencies]

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
opt-level = 0
overflow-checks = true

[profile.release]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
opt-level = 3
overflow-checks = false
