[package]
name = "byrdocs-tui"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
config = { path = "../config", version = "0.1.0" }
metadata = { path = "../metadata", version = "0.1.0" }
init = { path = "../init", version = "0.1.0" }
shellexpand = "3.1.0"
yaml-rust = "0.4.5"
